--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body{
   line-height: 1.6;
   
   main{
-    background-image: url(./assets/images/forest.jpg);
+    background-image: url(./assets/forest-BYuXmKv9.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
